[package]
name = "pretty-rocm-smi"
version = "0.1.0"
edition = "2021"
description = "A prettier rocm-smi output with color-coded GPU stats"
license = "MIT"
repository = "https://github.com/msaroufim/pretty-rocm-smi"
keywords = ["rocm", "gpu", "amd", "smi", "monitoring"]
categories = ["command-line-utilities"]

[dependencies]
serde_json = "1"
regex = "1"
chrono = "0.4"
